test/arrays/ferguson/array-of-owned-error1.good
array-of-owned-error1.chpl:3: In function 'id':
array-of-owned-error1.chpl:4: error: invalid implicit copy-initialization
array-of-owned-error1.chpl:4: error: Cannot copy array with element type that cannot be assigned
array-of-owned-error1.chpl:9: note: [domain(1,int(64),false)] owned C does not have a valid init=
